update swag documentation
